@@ -1,5 +1,6 @@
 TBD - 1.8
 - Code updated to Qt 5.12.2.
+Improvement: VUCC_GRIDS & MY_VUCC_GRIDS are also managed in the UI.
 
 July 2021 - 1.7
 - Bugfix: RealTime remained checked when editing.
